[project]
name = "research-summarization-system"
version = "0.1.0"
description = "Local UV project for the Example 2.1 multi-agent workflow (research + summarization)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-adk>=1.18.0",
  "google-genai>=0.3",
  "python-dotenv",
]

[tool.uv]
package = false
